<resources>
    <string name="app_name">Russian-tatar dictionary</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="clear_history">Clear history</string>
    <string name="update_base">Update base</string>
    <string name="add_translation">Add new word</string>
    <string name="show_additional_buttons">Show additional buttons</string>
    <string name="share">Share via</string>
    <string name="edit_translation">Edit translation</string>
    <string name="letter_1" translatable="false">ә</string>
    <string name="letter_2" translatable="false">җ</string>
    <string name="letter_3" translatable="false">ң</string>
    <string name="letter_4" translatable="false">ө</string>
    <string name="letter_5" translatable="false">ү</string>
    <string name="letter_6" translatable="false">һ</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_search_history">No search history</string>
    <string name="base_update_success">Dictionary base updated</string>
    <string name="base_update_start">Dictionary update started</string>
    <string name="base_update_failed">Base update failed</string>
    <string name="no_search_result">Nothing found</string>
    <string name="no_translation">No translation</string>
    <string name="no_word">No word</string>
    <string name="title_activity_testing" translatable="false">TestingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="history_cleared">History cleared</string>
    <string name="tat_rus">tat-rus</string>
    <string name="rus_tat">rus-tat</string>
    <string name="examples_title">Examples:</string>
</resources>
