<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/mic_button"
        android:title="@string/search"
        android:icon="@drawable/ic_mic_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/clear_history"
        android:title="@string/clear_history"/>
    <item android:id="@+id/update"
        android:title="@string/update_base" />
    <item android:id="@+id/add_translation"
        android:title="@string/add_translation"/>
    <item
        android:id="@+id/show_keyboard_checkbox"
        android:title="@string/show_additional_buttons"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>

</menu>