<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llFooter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="bottom|center_horizontal"
    android:orientation="horizontal"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/button1"
            style="@style/additional_button"
            android:text="@string/letter_1" />

        <Button
            android:id="@+id/button2"
            style="@style/additional_button"
            android:text="@string/letter_2" />

        <Button
            android:id="@+id/button3"
            style="@style/additional_button"
            android:text="@string/letter_3" />

        <Button
            android:id="@+id/button4"
            style="@style/additional_button"
            android:text="@string/letter_4" />

        <Button
            android:id="@+id/button5"
            style="@style/additional_button"
            android:text="@string/letter_5" />

        <Button
            android:id="@+id/button6"
            style="@style/additional_button"
            android:text="@string/letter_6" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>