<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_translation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AddTranslationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/translation_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_translation_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="40"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:paddingLeft="16dp">

        <TextView
            android:text="@string/word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/word_label"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/word"
            android:labelFor="@id/word_label"
            android:paddingBottom="8dp"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/translation_label"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/translation"
            android:labelFor="@id/translation_label"
            android:paddingBottom="8dp"
            android:textSize="16sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:layout_gravity="end"
            android:hint="@string/submit" />
    </LinearLayout>

    <include
        android:id="@+id/llFooter"
        layout="@layout/footer_layout" />

</android.support.design.widget.CoordinatorLayout>